# inait-forecast-docs

./: .gitignore  Makefile  README.md  data_input_guide.md  package-README.md  pyproject.toml  sample.env  setup.sh
.binder/: postBuild
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  public-release.yml
.jupyter/lab/user-settings/@jupyterlab/docmanager-extension/: plugin.jupyterlab-settings
assets/: nb_1_linear_prediction_0.parquet  nb_1_linear_prediction_1.parquet  nb_1_linear_prediction_2.parquet  nb_1_linear_prediction_3.parquet  nb_1_linear_prediction_4.parquet
assets/nb_1_predictions/: nb_1_linear_prediction_0.parquet  nb_1_linear_prediction_1.parquet  nb_1_linear_prediction_10.parquet  nb_1_linear_prediction_11.parquet  nb_1_linear_prediction_12.parquet  nb_1_linear_prediction_13.parquet  nb_1_linear_prediction_14.parquet  nb_1_linear_prediction_15.parquet  nb_1_linear_prediction_16.parquet  nb_1_linear_prediction_17.parquet  nb_1_linear_prediction_18.parquet  nb_1_linear_prediction_19.parquet  nb_1_linear_prediction_2.parquet  nb_1_linear_prediction_20.parquet  nb_1_linear_prediction_21.parquet  nb_1_linear_prediction_22.parquet  nb_1_linear_prediction_23.parquet  nb_1_linear_prediction_24.parquet  nb_1_linear_prediction_25.parquet  nb_1_linear_prediction_26.parquet  nb_1_linear_prediction_27.parquet  nb_1_linear_prediction_28.parquet  nb_1_linear_prediction_29.parquet  nb_1_linear_prediction_3.parquet  nb_1_linear_prediction_30.parquet  nb_1_linear_prediction_31.parquet  nb_1_linear_prediction_32.parquet  nb_1_linear_prediction_33.parquet  nb_1_linear_prediction_34.parquet  nb_1_linear_prediction_35.parquet  nb_1_linear_prediction_36.parquet  nb_1_linear_prediction_37.parquet  nb_1_linear_prediction_38.parquet  nb_1_linear_prediction_39.parquet  nb_1_linear_prediction_4.parquet  nb_1_linear_prediction_40.parquet  nb_1_linear_prediction_41.parquet  nb_1_linear_prediction_42.parquet  nb_1_linear_prediction_43.parquet  nb_1_linear_prediction_44.parquet  (+10 more)
client/: __init__.py  plot_script.py  prediction_script.py
data/: FMSA_Articles.csv  airline.csv  airline.xlsx  autoformer_etth1.csv  autoformer_etth1_small.csv  dataset_GKYZ_2016_AAPL.csv  dataset_GKYZ_2016_AAPL_MSFT_trimmed.csv  etth1.csv  lev3_store_id__CA_1__rollsales+3ids+3enc_y_short.csv  power_day_ahead.csv
futurecomplete-examples/: frontiers_articles.ipynb  power.ipynb  utils.py  volatility_aapl.ipynb  volatility_prediction_use_case.ipynb  volatility_sp100.ipynb
inait/: __init__.py  backtest_script.py  explanation_script.py  plot_script.py  prediction_script.py  utils.py
inait-predict-examples/: README.md  pyproject.toml  setup.sh
inait-predict-examples/client/: prediction_script.py  utils.py
inait-predict-examples/notebook-examples/: 0_quickstart.ipynb  1_neural_models_probability.ipynb  background_ensemble_prediction.ipynb  basic_functionality.ipynb  prediction_intervals_visualization.ipynb
notebook-examples/: 0_quickstart.ipynb  1_advanced_model_evaluation.ipynb  1_neural_models_probability.ipynb  2_energy_forecast_interpretability.ipynb  2_interpretability_intervals.ipynb  2_model_interpretability.ipynb  3_m5.ipynb  3_sales_forecast_what-if_scenarios.ipynb  3_sales_forecast_with_uncertainty.ipynb  background_ensemble_prediction.ipynb  basic_functionality.ipynb  prediction_intervals_visualization.ipynb  to_be_deleted_background_ensemble_prediction.ipynb  to_be_deleted_basic_functionality.ipynb  transform_fmsa_articles.ipynb
scripts/: pre-commit  pre-push
