[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inait-predict-examples"
version = "0.1.0"
description = "Examples and client implementation for inait Forecasting platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Inait Team" },
]
keywords = ["forecasting", "time-series", "machine-learning", "prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "matplotlib>=3.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "plotly>=5.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/inait/marketplace-examples"
Documentation = "https://github.com/inait/marketplace-examples/tree/main/inait-predict-examples"
Repository = "https://github.com/inait/marketplace-examples.git"
Issues = "https://github.com/inait/marketplace-examples/issues"

[tool.hatch.build.targets.wheel]
packages = ["client"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=client --cov-report=term-missing --cov-report=xml"
